@@ -139,6 +139,42 @@ name|serde2
 operator|.
 name|objectinspector
 operator|.
+name|ObjectInspectorUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|serde2
+operator|.
+name|objectinspector
+operator|.
+name|PrimitiveObjectInspector
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|serde2
+operator|.
+name|objectinspector
+operator|.
 name|ObjectInspector
 operator|.
 name|Category
@@ -180,7 +216,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * GenericUDFField.  *  */
+comment|/**  * GenericUDFField.  *   */
 end_comment
 
 begin_class
@@ -209,6 +245,11 @@ name|GenericUDFField
 extends|extends
 name|GenericUDF
 block|{
+specifier|private
+name|ObjectInspector
+index|[]
+name|argumentOIs
+decl_stmt|;
 annotation|@
 name|Override
 specifier|public
@@ -239,6 +280,10 @@ literal|"The function FIELD(str, str1, str2, ...) needs at least two arguments."
 argument_list|)
 throw|;
 block|}
+name|argumentOIs
+operator|=
+name|arguments
+expr_stmt|;
 for|for
 control|(
 name|int
@@ -393,14 +438,36 @@ if|if
 condition|(
 name|arguments
 index|[
+name|i
+index|]
+operator|.
+name|get
+argument_list|()
+operator|==
+literal|null
+condition|)
+block|{
+continue|continue;
+block|}
+if|if
+condition|(
+name|ObjectInspectorUtils
+operator|.
+name|compare
+argument_list|(
+name|arguments
+index|[
 literal|0
 index|]
 operator|.
 name|get
 argument_list|()
-operator|.
-name|equals
-argument_list|(
+argument_list|,
+name|argumentOIs
+index|[
+literal|0
+index|]
+argument_list|,
 name|arguments
 index|[
 name|i
@@ -408,7 +475,14 @@ index|]
 operator|.
 name|get
 argument_list|()
+argument_list|,
+name|argumentOIs
+index|[
+name|i
+index|]
 argument_list|)
+operator|==
+literal|0
 condition|)
 block|{
 name|r
